za nowym york'iem deszczowym jak